// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderDisplay snapshots above threshold but below month cursor (green override) 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                GitHub Copilot Pro - Premium Requests Usage                 \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                            June 2025 • octocat                             \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m240\x1B[22m\x1B[2m/300 (\x1B[22m\x1B[32m\x1B[1m80.0%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                                                   \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[32m████████████████████████████████████████████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mResets:   July 1, 2025 at 00:00 UTC\x1B[22m                                         \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mgpt-4o                  240 \x1B[33m████████████████████████████████\x1B[39m\x1B[2m░░░░░░░░\x1B[22m   80.0%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────────────────────────┘\x1B[22m
"
`;

exports[`renderDisplay snapshots zero usage, pro plan 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                GitHub Copilot Pro - Premium Requests Usage                 \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                            June 2025 • octocat                             \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m0\x1B[22m\x1B[2m/300 (\x1B[22m\x1B[32m\x1B[1m0.0%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                                                      \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[32m\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mResets:   July 1, 2025 at 00:00 UTC\x1B[22m                                         \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mNo premium requests used yet.                                               \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────────────────────────┘\x1B[22m
"
`;

exports[`renderDisplay snapshots low usage (green zone), pro plan, single model 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                GitHub Copilot Pro - Premium Requests Usage                 \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                            June 2025 • octocat                             \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m60\x1B[22m\x1B[2m/300 (\x1B[22m\x1B[32m\x1B[1m20.0%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                                                    \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[32m█████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mResets:   July 1, 2025 at 00:00 UTC\x1B[22m                                         \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mgpt-4o                   60 \x1B[32m████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m   20.0%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────────────────────────┘\x1B[22m
"
`;

exports[`renderDisplay snapshots mid usage (yellow zone), pro+ plan, multiple models 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                GitHub Copilot Pro+ - Premium Requests Usage                \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                            June 2025 • octocat                             \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m240\x1B[22m\x1B[2m/300 (\x1B[22m\x1B[31m\x1B[1m80.0%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                                                   \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[31m████████████████████████████████████████████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[31mResets:   July 1, 2025 at 00:00 UTC\x1B[39m                                         \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mgpt-4o                  150 \x1B[32m████████████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░\x1B[22m   50.0%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mclaude-3.5-sonnet        80 \x1B[32m██████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m   26.7%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mo3-mini                  10 \x1B[32m█\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m    3.3%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────────────────────────┘\x1B[22m
"
`;

exports[`renderDisplay snapshots high usage (red zone), business plan 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m              GitHub Copilot Business - Premium Requests Usage              \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                            June 2025 • octocat                             \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m780\x1B[22m\x1B[2m/800 (\x1B[22m\x1B[31m\x1B[1m97.5%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                                                   \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[31m████████████████████████████████████████████████████████████████\x1B[39m\x1B[2m░░\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[31mResets:   July 1, 2025 at 00:00 UTC\x1B[39m                                         \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mgpt-4o                  500 \x1B[32m█████████████████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░\x1B[22m   62.5%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mclaude-3.5-sonnet       280 \x1B[32m██████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m   35.0%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────────────────────────┘\x1B[22m
"
`;

exports[`renderDisplay snapshots usage exceeds limit (over 100%) 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                GitHub Copilot Pro - Premium Requests Usage                 \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                            June 2025 • octocat                             \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m350\x1B[22m\x1B[2m/300 (\x1B[22m\x1B[31m\x1B[1m116.7%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                                                  \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[31m██████████████████████████████████████████████████████████████████\x1B[39m\x1B[2m\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[31mResets:   July 1, 2025 at 00:00 UTC\x1B[39m                                         \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mgpt-4o                  350 \x1B[31m████████████████████████████████████████\x1B[39m\x1B[2m\x1B[22m  116.7%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────────────────────────┘\x1B[22m
"
`;

exports[`renderDisplay snapshots long model name gets truncated 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                GitHub Copilot Pro - Premium Requests Usage                 \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                            June 2025 • octocat                             \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m150\x1B[22m\x1B[2m/300 (\x1B[22m\x1B[33m\x1B[1m50.0%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                                                   \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[33m█████████████████████████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[33mResets:   July 1, 2025 at 00:00 UTC\x1B[39m                                         \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22ma-very-long-model-nam…  100 \x1B[32m█████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m   33.3%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mgpt-4o                   50 \x1B[32m██████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m   16.7%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────────────────────────┘\x1B[22m
"
`;

exports[`renderDisplay snapshots end of month, next reset in following year 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                GitHub Copilot Pro - Premium Requests Usage                 \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                          December 2025 • octocat                           \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m0\x1B[22m\x1B[2m/300 (\x1B[22m\x1B[32m\x1B[1m0.0%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                                                      \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[32m\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mResets:   January 1, 2026 at 00:00 UTC\x1B[22m                                      \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mNo premium requests used yet.                                               \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                            \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────────────────────────┘\x1B[22m
"
`;

exports[`renderDisplay snapshots layout at 60 columns 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                        \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m      GitHub Copilot Pro - Premium Requests Usage       \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                  June 2025 • octocat                   \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                        \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m180\x1B[22m\x1B[2m/300 (\x1B[22m\x1B[33m\x1B[1m60.0%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                               \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[33m███████████████████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                        \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[33mResets:   July 1, 2025 at 00:00 UTC\x1B[39m                     \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                        \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                        \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mgpt-4o                  120 \x1B[32m████████\x1B[39m\x1B[2m░░░░░░░░░░░░\x1B[22m   40.0%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mclaude-3.5-sonnet        60 \x1B[32m████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░\x1B[22m   20.0%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                        \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────┘\x1B[22m
"
`;

exports[`renderDisplay snapshots layout at 100 columns 1`] = `
"\x1B[2m┌──────────────────────────────────────────────────────────────────────────────────────────────────┐\x1B[22m
\x1B[2m│ \x1B[22m                                                                                                \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                          GitHub Copilot Pro - Premium Requests Usage                           \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                      June 2025 • octocat                                       \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                                                \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22mOverall:  \x1B[1m180\x1B[22m\x1B[2m/300 (\x1B[22m\x1B[33m\x1B[1m60.0%\x1B[22m\x1B[39m\x1B[2m)\x1B[22m                                                                       \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mUsage:    \x1B[33m███████████████████████████████████████████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mMonth:    \x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m|\x1B[2m⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅⋅\x1B[22m\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                                                \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m\x1B[33mResets:   July 1, 2025 at 00:00 UTC\x1B[39m                                                             \x1B[2m │\x1B[22m
\x1B[2m├──────────────────────────────────────────────────────────────────────────────────────────────────┤\x1B[22m
\x1B[2m│ \x1B[22m\x1B[2mPer-model usage:\x1B[22m                                                                                \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                                                \x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mgpt-4o                  120 \x1B[32m████████████████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m   40.0%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22mclaude-3.5-sonnet        60 \x1B[32m████████████\x1B[39m\x1B[2m░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░\x1B[22m   20.0%\x1B[2m │\x1B[22m
\x1B[2m│ \x1B[22m                                                                                                \x1B[2m │\x1B[22m
\x1B[2m└──────────────────────────────────────────────────────────────────────────────────────────────────┘\x1B[22m
"
`;
